--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
 		compile 'org.apache.commons:commons-lang3:3.3.2'
 		compile 'org.slf4j:slf4j-api:1.7.10'
 		compile 'org.slf4j:slf4j-simple:1.7.10'
+		compile 'org.json:json:20140107'
 		testCompile 'junit:junit:4.11'
 		testCompile 'com.github.tomakehurst:wiremock:1.53'
 	}
